<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_on_background_emphasis_high_type"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/notification_album_art"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Song Title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notification_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Artist Name" />
    </LinearLayout>

    <ImageView
        android:id="@+id/notification_prev"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/prev"
        android:src="@drawable/previous" />

    <ImageView
        android:id="@+id/notification_play_pause"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/play_pause"
        android:src="@drawable/play" />

    <ImageView
        android:id="@+id/notification_next"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/next"
        android:src="@drawable/next" />
</LinearLayout>
